--- a/index.css
+++ b/index.css
@@ -16,8 +16,8 @@ section{    /*Content location*/
 }
 .form-box{      /*Form box size*/
     position: relative;
-    width:  100%;
-    height: 2000px;
+    width:  400px;
+    height: 450px;
     background: transparent;
     backdrop-filter: blur(2px);
     border: 2px solid rgba(255, 255, 255, 1);
@@ -120,25 +120,22 @@ button{ /* button format */
     text-decoration: underline;
 }
 
-@media(min-width: 400px){
+@media(max-width: 1000px){
     .form-box{
-        max-width: 400px;
-        max-height: 450px;
+        scale: 120%;
     }
 }
 
-@media(min-width: 700px){
+@media(max-width: 750px){
     .form-box{
-        max-width: 700px;
-        max-height: 787px;
+        scale: 150%;
     }
 }
 
 
-@media(min-width: 900px){
+@media(max-width: 400px){
     .form-box{
-        max-width: 900px;
-        max-height: 1012px;
+        scale: 175%;
     }
 }
 
